--- a/package.json
+++ b/package.json
@@ -15,10 +15,12 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@testing-library/react": "13.4.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "chrome-types": "0.1.163",
+    "jsdom": "21.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vitest": "0.27.2"
