--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "9.0.0"
   },
   "devDependencies": {
     "@testing-library/react": "13.4.0",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
+    "@types/uuid": "9.0.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
     "chrome-types": "0.1.163",
     "jsdom": "21.0.0",
