--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@vitejs/plugin-react-swc": "^3.0.0",
     "chrome-types": "0.1.163",
     "jsdom": "21.0.0",
+    "rome": "11.0.0",
     "typescript": "^4.9.3",
     "vite": "^4.0.0",
     "vitest": "0.27.2"
