--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "build:extension": "tsc && vite build --mode extension",
     "preview": "vite preview",
-    "test": "vitest run --reporter verbose"
+    "test": "vitest run --reporter verbose",
+    "format": "rome format --write src"
   },
   "dependencies": {
     "react": "^18.2.0",
