--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "uuid": "9.0.0"
   },
   "devDependencies": {
+    "@testing-library/dom": "8.20.0",
     "@testing-library/react": "13.4.0",
+    "@testing-library/user-event": "14.4.3",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@types/uuid": "9.0.0",
